# fastapi-next-app

./: .gitignore  main.py  pyproject.toml
app/api/: main.py
app/api/routes/: oauth.py
app/core/: config.py  security.py
static/templates/: authorize.html  login.html
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx  providers.tsx
web/components/: ThemeSwitch.tsx
web/components/icons/: MoonFilledIcon.tsx  SunFilledIcon.tsx  VoyahLogoIcon.tsx  index.tsx
web/config/: site.ts
web/styles/fonts/: index.ts
