[project]
name = "userauthserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.35.0",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
]
